<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Elevated"
    tools:context=".fragments.MovieAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_movie_to_database"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="110dp"
            android:layout_height="168dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/chooseMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_movie_n_poster"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/moviePoster"
            app:layout_constraintTop_toTopOf="@id/moviePoster"
            app:layout_constraintEnd_toEndOf="@id/moviePoster"
            app:layout_constraintBottom_toBottomOf="@id/moviePoster"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:iconSize="20dp"
            app:icon="@drawable/round_close_24"
            app:layout_constraintStart_toEndOf="@id/titleTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/movieNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="240dp"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:hint="@string/enter_movie_name"
            app:layout_constraintStart_toEndOf="@id/moviePoster"
            app:layout_constraintTop_toTopOf="@id/moviePoster"/>

        <TextView
            android:id="@+id/releaseYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/release_year"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/movieNameEditText"
            app:layout_constraintStart_toStartOf="@id/movieNameEditText"/>

        <EditText
            android:id="@+id/movieReleaseYearEditText"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:hint="@string/year"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/releaseYearTextView"
            app:layout_constraintTop_toTopOf="@id/releaseYearTextView"
            app:layout_constraintBottom_toBottomOf="@id/releaseYearTextView"/>

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/releaseYearTextView"
            app:layout_constraintStart_toStartOf="@id/movieNameEditText"/>

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/genreTextView"
            app:layout_constraintStart_toEndOf="@id/genreTextView"/>

        <TextView
            android:id="@+id/rateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_rate"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/movieNameEditText"
            app:layout_constraintTop_toBottomOf="@id/genreTextView"/>

        <EditText
            android:id="@+id/movieRateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:hint="@string/rate"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@id/rateTextView"
            app:layout_constraintTop_toTopOf="@id/rateTextView"
            app:layout_constraintBottom_toBottomOf="@id/rateTextView"/>

        <EditText
            android:id="@+id/movieDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_movie_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRateEditText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMovieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/movieDescriptionEditText"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>