<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/actionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actionRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/adventureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventure"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/adventureRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </LinearLayout>
</ScrollView>